--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer
     class="sidenav"
     fixedInViewport
@@ -7,12 +7,13 @@
     [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item
-        href="#">Link 1</a>
-      <a mat-list-item
-        href="#">Link 2</a>
-      <a mat-list-item
-        href="#">Link 3</a>
+      <a matLine
+        *ngFor="let item of menuItems"
+        mat-list-item
+        [routerLink]="'/'+item.path">
+        <mat-icon svgIcon="{{item.icon}}"> </mat-icon>
+        {{item.name | titlecase}}
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -27,9 +28,15 @@
       <span>dark-mode</span>
       <span class="spacer"></span>
       <button mat-icon-button
-        [color]="darkMode ? 'accent' : 'primary'"
-        (click)="toggleDarkMode()">
-        <mat-icon>
+        aria-label="Toggle dark mode"
+        mattooltip="Toggle dark mode"
+        [color]="
+        darkMode
+        ? 'accent'
+        : 'primary'"
+        (click)="
+        toggleDarkMode()">
+        <mat-icon role="img">
           {{ darkMode ? 'nightlight_round': ' light_mode' }}
         </mat-icon>
       </button>
