--- a/src/styles/mat-theme.scss
+++ b/src/styles/mat-theme.scss
@@ -15,7 +15,7 @@ $light-theme: mat.define-light-theme((
 ));
 
 //Define a dark theme
-$dark-primary: mat.define-palette(mat.$pink-palette);
+$dark-primary: mat.define-palette(mat.$teal-palette, A200, A100, A400);
 $dark-accent: mat.define-palette(mat.$blue-gray-palette);
 $dark-theme: mat.define-dark-theme((
  color: (
