--- a/src/app/profile/register/register.component.html
+++ b/src/app/profile/register/register.component.html
@@ -14,7 +14,6 @@
             type="email"
             formControlName="email"
             placeholder="Email">
-        <input matInput>
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Password</mat-label>
@@ -22,7 +21,7 @@
             formControlName="password"
             type="password"
             placeholder="password">
-        <input matInput>
+        <mat-error *ngIf="password?.invalid && !password?.hasError('required')">Password strength invalid</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Avatar</mat-label>
@@ -42,7 +41,7 @@
     </button>
     <button mat-raised-button
         color="primary"
-        click="dismiss()">
+        (click)="dismiss()">
         <mat-icon>
             cancel
         </mat-icon>
