--- a/src/app/profile/register/register.component.html
+++ b/src/app/profile/register/register.component.html
@@ -19,16 +19,46 @@
         <mat-label>Password</mat-label>
         <input matInput
             formControlName="password"
-            type="password"
+            [type]="hide ? 'password' : 'text'"
             placeholder="password">
-        <mat-error *ngIf="password?.invalid && !password?.hasError('required')">Password strength invalid</mat-error>
+        <button mat-icon-button
+            matSuffix
+            (click)="hide = !hide"
+            [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+        <mat-error *ngIf="password?.invalid && !password?.hasError('required')">Password must be at least 8
+            characters</mat-error>
+        <mat-error *ngIf="password?.errors?.passwordStrength">Your password must have lower case, upper case and numeric
+            characters.</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+        <mat-label>Confirm password</mat-label>
+        <input matInput
+            formControlName="passwordConfirm"
+            [type]="hide ? 'password' : 'text'"
+            placeholder="password">
+        <button mat-icon-button
+            matSuffix
+            (click)="hide = !hide"
+            [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+        <mat-error *ngIf="passwordConfirm?.errors?.mismatch">Passwords do not match</mat-error>
     </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Avatar</mat-label>
         <mat-select placeholder="Select avatar"
             formControlName="avatar">
-            <mat-option value="one">First option</mat-option>
-            <mat-option value="two">Second option</mat-option>
+            <mat-select-trigger>
+                <mat-icon svgIcon="{{avatar}}"></mat-icon> {{avatar}}
+            </mat-select-trigger>
+            <mat-option *ngFor="let avatar of avatars"
+                [value]="avatar">
+                <mat-icon svgIcon="{{avatar}}"></mat-icon> {{avatar}}
+            </mat-option>
         </mat-select>
     </mat-form-field>
 </mat-dialog-content>
