commit before switch

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -43,7 +43,8 @@
           <mat-icon>person_add</mat-icon>
           <span>Register</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item
+          (click)="openLoginDialog()">
           <mat-icon>login</mat-icon>
           <span>Login</span>
         </button>
