--- a/src/app/profile/write-journal/write-journal.component.html
+++ b/src/app/profile/write-journal/write-journal.component.html
@@ -1,9 +1,29 @@
-<button (click)="submit()">Post</button>
-<input type="text"
-    [(ngModel)]="journal.title">
-<div id="editor">
-    <textarea [(ngModel)]="journal.entry">
-        </textarea>
-    <div class="code"
-        [innerHTML]="converted"></div>
-</div>
+<mat-card class="main-div">
+    <mat-card-header>
+        <mat-card-title>Compose Entry</mat-card-title>
+        <mat-card-subtitle>How was your day?</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <form>
+            <mat-form-field appearance="fill"
+                class="full-width">
+                <mat-label>Title</mat-label>
+                <input matInput
+                    type="text"
+                    name="title"
+                    placeholder="Journal title"
+                    [(ngModel)]="journal.title">
+            </mat-form-field>
+            <textarea [(ngModel)]="journal.entry"
+                name="entry">
+                </textarea>
+
+        </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button
+            (click)="submit()">Save</button>
+        <button mat-button
+            (click)="preview()">Preview</button>
+    </mat-card-actions>
+</mat-card>
