--- a/src/app/profile/write-journal/write-journal.component.scss
+++ b/src/app/profile/write-journal/write-journal.component.scss
@@ -1,31 +1,46 @@
 #editor {
-  margin: 0;
-  height: 100%;
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  color: #333;
-}
+    margin: 0;
+    height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    color: #333;
+  div {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    vertical-align: top;
+    box-sizing: border-box;
+    padding-left: 1em;
+    padding-top: 1em;
+    min-height: 50vh;
+  }
 
-textarea,
-#editor div {
-  display: inline-block;
-  width: 49%;
-  height: 100%;
-  vertical-align: top;
-  box-sizing: border-box;
-  padding: 0 20px;
 }
-
+.full-width {
+    width: 100%;
+}
+.main-div {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 textarea {
-  border: none;
-  border-right: 1px solid #ccc;
-  resize: none;
-  outline: none;
-  background-color: #f6f6f6;
-  font-size: 14px;
-  font-family: "Monaco", courier, monospace;
-  padding: 20px;
+    border: none;
+    border-right: 1px solid #ccc;
+    resize: none;
+    outline: none;
+    height: 100%;
+    min-height: 50vh;
+    background-color: #f6f6f6;
+    font-size: 14px;
+    font-family: "Monaco", courier, monospace;
+    padding: 20px;
+    margin: 0;
 }
 
 .code {
-  background-color: #f6f6f6;
+  background-color: Canvas;
 }
