--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="form"
+    #createForm="ngForm"
     (ngSubmit)="submitForm()"
     novalidate>
     <section class="header">
@@ -10,7 +11,10 @@
         </div>
     </section>
     <mat-error *ngIf="errorMessage">
-        {{ errorMessage }}
+        {{ errorMessage | titlecase}}
+    </mat-error>
+    <mat-error *ngIf="errorMessage">
+        {{ nameError | titlecase}}
     </mat-error>
     <mat-form-field appearance="fill"
         class="form-item">
@@ -18,14 +22,20 @@
         <input matInput
             placeholder="Eg. Super Special Fishcake"
             formControlName="name">
-
+        <mat-error *ngIf="form.get('name')?.invalid && !form.get('name')?.hasError('required') || nameError">
+            {{ nameError || "Product name must be at least 8 characters"}}
+        </mat-error>
     </mat-form-field>
-    <mat-error *ngIf="!form.get('name')?.valid">
-        {{ "Please enter a valid name"}}
-    </mat-error>
-    <mat-error *ngIf="nameError">
-        {{ nameError }}
-    </mat-error>
+    <mat-form-field appearance="fill"
+        class="form-item">
+        <mat-label>Product type</mat-label>
+        <input matInput
+            placeholder="Eg. Cooked food"
+            formControlName="productType">
+        <mat-error *ngIf="(form.get('productType')?.invalid && !form.get('productType')?.hasError('required'))">
+            {{ productTypeError || "Product type must be at least 8 characters"}}
+        </mat-error>
+    </mat-form-field>
     <mat-form-field appearance="fill"
         class="form-item">
         <mat-label>Product Description</mat-label>
@@ -33,13 +43,30 @@
             [rows]="8"
             formControlName="description"
             placeholder="Eg. Super Special Fishcake is 100% made from wild caught salmon"></textarea>
+        <mat-error *ngIf="form.get('description')?.invalid && !form.get('description')?.hasError('required')">
+            {{ descriptionError || "Product description must be at least 8 characters"}}
+        </mat-error>
     </mat-form-field>
-    <mat-error *ngIf="!form.get('description')?.valid">
-        {{ "Please enter a valid description"}}
-    </mat-error>
-    <mat-error *ngIf="descriptionError">
-        {{ descriptionError }}
-    </mat-error>
+    <mat-form-field appearance="fill"
+        class="form-item">
+        <mat-label>Product Image</mat-label>
+        <input matInput
+            [readonly]="true"
+            formControlName="fileName"
+            (click)="fileUpload.click()"
+            placeholder="
+            No
+            file
+            selected">
+        <button mat-mini-fab
+            matSuffix
+            color="primary"
+            class="upload-btn"
+            type="button"
+            (click)="fileUpload.click()">
+            <mat-icon>attach_file</mat-icon>
+        </button>
+    </mat-form-field>
     <section class="form-item">
         <article class="file-input">
             <input type="file"
@@ -49,9 +76,6 @@
                 #fileUpload>
 
             <div class="file-upload">
-                <div *ngIf="imagePreview == ''">
-                    {{fileName || "No file uploaded yet."}}
-                </div>
                 <div class="preview-image"
                     *ngIf="imagePreview !== ''
                 && imagePreview && form.get('file')?.valid">
@@ -60,13 +84,6 @@
                         [alt]="fileName">
                 </div>
                 <div>
-                    <button mat-mini-fab
-                        color="primary"
-                        class="upload-btn"
-                        type="button"
-                        (click)="fileUpload.click()">
-                        <mat-icon>attach_file</mat-icon>
-                    </button>
                 </div>
             </div>
         </article>
