--- a/src/app/products/product-update/product-update.component.html
+++ b/src/app/products/product-update/product-update.component.html
@@ -87,7 +87,6 @@
         <article class="file-input">
             <input type="file"
                 class="file-input"
-                formControlName="productType"
                 (change)="onFileSelected($event)"
                 [accept]="accepted"
                 #fileUpload>
@@ -95,10 +94,10 @@
             <div class="file-upload">
                 <div class="preview-image"
                     *ngIf="imagePreview !== ''
-                && imagePreview && form.get('file')?.valid">
+                && imagePreview">
 
                     <img [src]="imagePreview"
-                        [alt]="fileName">
+                        [alt]="product.name">
                 </div>
                 <div>
                 </div>
