feat(product-update): updating form controls

--- a/src/app/products/product-update/product-update.component.html
+++ b/src/app/products/product-update/product-update.component.html
@@ -12,11 +12,27 @@
             <h2>Edit Product</h2>
         </ng-template>
 
-        <div class="button-wrapper">
-            <button mat-flat-button
-                [disabled]="!form.valid || isSubmitting"
-                color="primary">Submit</button>
-        </div>
+
+    </section>
+    <section class="bm-button-row">
+        <button mat-raised-button
+            [disabled]="!form.valid || isSubmitting"
+            color="primary">Submit</button>
+        <span class="spacer">
+
+        </span>
+        <button mat-raised-button
+            type="reset"
+            [disabled]="isSubmitting"
+            color="accent">
+            <mat-icon>refresh</mat-icon>
+        </button>
+        <button mat-flat-button
+            type="button"
+            [disabled]="isSubmitting"
+            (click)="cancel()">
+            <mat-icon>cancel</mat-icon>
+        </button>
     </section>
     <mat-error *ngIf="errorMessage">
         {{ errorMessage | titlecase}}
