--- a/src/app/products/product-update/product-update.component.html
+++ b/src/app/products/product-update/product-update.component.html
@@ -11,24 +11,26 @@
         <ng-template #elseBlock>
             <h2>Edit Product</h2>
         </ng-template>
-
-
     </section>
     <section class="bm-button-row">
         <button mat-raised-button
             [disabled]="!form.valid || isSubmitting"
-            color="primary">Submit</button>
+            color="primary">
+            Submit
+        </button>
         <span class="spacer">
-
         </span>
-        <button mat-raised-button
+        <button mat-mini-fab
             type="reset"
             [disabled]="isSubmitting"
+            matTooltip="Reset the form"
             color="accent">
             <mat-icon>refresh</mat-icon>
         </button>
-        <button mat-flat-button
+        <button mat-mini-fab
             type="button"
+            color="warn"
+            matTooltip="Cancel and go back to the main page"
             [disabled]="isSubmitting"
             (click)="cancel()">
             <mat-icon>cancel</mat-icon>
