--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -37,8 +37,8 @@
     <mat-error *ngIf="errorMessage">
         {{ errorMessage | titlecase}}
     </mat-error>
-    <mat-error *ngIf="errorMessage">
-        {{ nameError | titlecase}}
+    <mat-error *ngIf="errorObject.name">
+        {{ errorObject.name | titlecase}}
     </mat-error>
     <mat-form-field appearance="fill"
         class="form-item">
@@ -46,8 +46,8 @@
         <input matInput
             placeholder="Eg. Super Special Fishcake"
             formControlName="name">
-        <mat-error *ngIf="form.get('name')?.invalid && !form.get('name')?.hasError('required') || nameError">
-            {{ nameError || "Product name must be at least 8 characters"}}
+        <mat-error *ngIf="form.get('name')?.invalid && !form.get('name')?.hasError('required')">
+            Product name must be at least 8 characters
         </mat-error>
         <mat-error *ngIf="form.get('name')?.hasError('required')">
             This is required.
@@ -60,7 +60,7 @@
             placeholder="Eg. Cooked food"
             formControlName="productType">
         <mat-error *ngIf="(form.get('productType')?.invalid && !form.get('productType')?.hasError('required'))">
-            {{ productTypeError || "Product type must be at least 8 characters"}}
+            {{ errorObject.productType || "Product type must be at least 8 characters"}}
         </mat-error>
         <mat-error *ngIf="form.get('productType')?.hasError('required')">
             This is required.
@@ -74,7 +74,7 @@
             formControlName="description"
             placeholder="Eg. Super Special Fishcake is 100% made from wild caught salmon"></textarea>
         <mat-error *ngIf="form.get('description')?.invalid && !form.get('description')?.hasError('required')">
-            {{ descriptionError || "Product description must be at least 8 characters"}}
+            Product description must be at least 8 characters
         </mat-error>
         <mat-error *ngIf="form.get('description')?.hasError('required')">
             This is required.
@@ -129,8 +129,8 @@
                 </div>
             </div>
         </article>
-        <mat-error *ngIf="fileError">
-            {{ fileError }}
+        <mat-error *ngIf="errorObject.file">
+            {{ errorObject.file }}
         </mat-error>
     </section>
 </form>
