feat(product-create): update component to use base component

--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -114,10 +114,10 @@
 
             <div class="file-upload">
                 <div class="preview-image"
-                    *ngIf="imagePreview !== ''
-                && imagePreview && form.get('file')?.valid">
+                    *ngIf="imageSrc !== ''
+                && imageSrc && form.get('file')?.valid">
 
-                    <img [src]="imagePreview"
+                    <img [src]="imageSrc"
                         [alt]="fileName">
                 </div>
                 <div>
