feat(key-sign-up): adding additional check to only allow users with sign up key to register an account

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -42,7 +42,7 @@
         <mat-menu #menu="matMenu">
           <div *ngIf="!isAuthenticated">
             <button mat-menu-item
-              (click)="openRegisterDialog()">
+              (click)="openKeyDialog()">
               <mat-icon>person_add</mat-icon>
               <span>Register</span>
             </button>
